generate unchase openapi
